GNOME Bugzilla – Bug 763093
udpsrc: Fix multicast group joining with provided sockets on Windows
Last modified: 2016-04-14 17:43:43 UTC
See commit message. This breaks gst-rtsp-server working in multicast mode on Windows.
Created attachment 323081 [details] [review] udpsrc: Fix multicast group joining with provided sockets on Windows On Windows the socket will be bound to ANY instead of the multicast group, as binding to a multicast group does not work. Which would mean that we override src->addr to become ANY and won't automatically join a multicast group anymore on Windows. On Linux we would automatically join a multicast group, keep it consistent.
Created attachment 323084 [details] [review] udpsrc: Fix multicast group joining with provided sockets on Windows On Windows the socket will be bound to ANY instead of the multicast group, as binding to a multicast group does not work. Which would mean that we override src->addr to become ANY and won't automatically join a multicast group anymore on Windows. On Linux we would automatically join a multicast group, keep it consistent.
Attachment 323084 [details] pushed as 49be64e - udpsrc: Fix multicast group joining with provided sockets on Windows